gcc/testsuite/rust/rustc/ui/error-codes/E0071.rs
enum Foo {}
type FooAlias = Foo;

fn main() {
    let u = FooAlias { value: 0 };
// { dg-error ".E0071." "" { target *-*-* } .-1 }
}

